fixes bug 1290329 - add spacing between sumo links on report index (#3474)

--- a/webapp-django/crashstats/crashstats/static/crashstats/css/report_index.css
+++ b/webapp-django/crashstats/crashstats/static/crashstats/css/report_index.css
@@ -10,3 +10,7 @@
     text-decoration: underline;
     text-decoration-style: dotted;
 }
+
+#sumo-link a {
+    margin-left: 5px;
+}
